@@ -1,3 +1,8 @@
+May 30 2015 <shlomif@shlomifish.org> (Shlomi Fish)
+
+  Error.pm #0.17024
+  - Add link to the VCS repository in META.yml
+
 Feb 12 2015 <shlomif@shlomifish.org> (Shlomi Fish)
 
   Error.pm #0.17023
